--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,8 +5,18 @@ All notable changes to the Schematron Rules and this project will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
-## [Unreleased]
+## v2019-06-24
+
+
+### Added
+
+- License
+
+### Changed
+
+- compatible with XRechnung 1.2.1
+- Add CEN license statement
 
 ### Fixed
 
-- BUG in the creation of `<xsl:template name="identifier-with-scheme-and-version">` 
+- BUG in the creation of `<xsl:template name="identifier-with-scheme-and-version">`
