--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,16 @@ All notable changes to the Schematron Rules and this project will be documented 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## v2020-07-19
+
+### Added
+- Sub Invoice Line with recursion in UBL-Invoice
+- PDF visualization
+
+### Changed
+- compatible with XRechnung 2.0.0
+- xsl scripts are not generated automaticle from xrechnung-model anymore
+
 ## v2019-06-24
 
 ### Added
