added missing line

--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -243,6 +243,7 @@
   <entry key="MwSt.">MwSt.</entry>
   <entry key="St. Code">St. Code</entry>
   <entry key="Gesamt">Gesamt</entry>
+  <entry key="Bereiche ohne Inhalte werden nicht dargestellt!">Bereiche ohne Inhalte werden nicht dargestellt!</entry>
   <entry key="Seite">Seite</entry>
   <entry key="Beschreibung">Beschreibung</entry>
   <entry key="date-format">[D].[M].[Y]</entry>
