--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -7,12 +7,12 @@
   <entry key="xr:Buyer_address_line_3" id="BT-163">Adresszeile 3</entry>
   <entry key="xr:Buyer_post_code" id="BT-53">PLZ</entry>
   <entry key="xr:Buyer_city" id="BT-52">Ort</entry>
-  <entry key="xr:Buyer_country_code" id="BT-55">Land</entry>
+  <entry key="xr:Buyer_country_code" id="BT-55">Ländercode</entry>
   <entry key="xr:Buyer_identifier" id="BT-46">Kennung</entry>
   <entry key="xr:Buyer_identifier/@scheme_identifier" id="BT-46">Schema der Kennung</entry>
-  <entry key="xr:Buyer_contact_point" id="BT-56">Name</entry>
-  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Telefon</entry>
-  <entry key="xr:Buyer_contact_email_address" id="BT-58">E-Mail-Adresse</entry>
+  <entry key="xr:Buyer_contact_point" id="BT-56">Kontaktstelle</entry>
+  <entry key="xr:Buyer_contact_telephone_number" id="BT-57">Kontaktstellen-Telefon</entry>
+  <entry key="xr:Buyer_contact_email_address" id="BT-58">Kontaktstellen-Email</entry>
   <entry key="xr:Seller_name" id="BT-27">Firmenname</entry>
   <entry key="xr:Seller_address_line_1" id="BT-35">Adresszeile 1</entry>
   <entry key="xr:Seller_address_line_2" id="BT-36">Adresszeile 2</entry>
@@ -23,17 +23,17 @@
   <entry key="xr:Seller_country_code" id="BT-40">Ländercode</entry>
   <entry key="xr:Seller_identifier" id="BT-29">Kennung</entry>
   <entry key="xr:Seller_identifier/@scheme_identifier" id="BT-29">Schema der Kennung</entry>
-  <entry key="xr:Seller_contact_point" id="BT-41">Name</entry>
-  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Telefon</entry>
-  <entry key="xr:Seller_contact_email_address" id="BT-43">E-Mail-Adresse</entry>
+  <entry key="xr:Seller_contact_point" id="BT-41">Kontaktstelle</entry>
+  <entry key="xr:Seller_contact_telephone_number" id="BT-42">Kontaktstellen-Telefon</entry>
+  <entry key="xr:Seller_contact_email_address" id="BT-43">Kontaktstellen-Email</entry>
   <entry key="xr:Invoice_number" id="BT-1">Rechnungsnummer</entry>
   <entry key="xr:Invoice_issue_date" id="BT-2">Rechnungsdatum</entry>
   <entry key="xr:Invoice_type_code" id="BT-3">Rechnungsart</entry>
   <entry key="xr:Invoice_currency_code" id="BT-5">Währung</entry>
-  <entry key="xr:Project_reference" id="BT-11">Projektnummer</entry>
-  <entry key="xr:Contract_reference" id="BT-12">Vertragsnummer</entry>
-  <entry key="xr:Purchase_order_reference" id="BT-13">Bestellnummer</entry>
-  <entry key="xr:Sales_order_reference" id="BT-14">Auftragsnummer</entry>
+  <entry key="xr:Project_reference" id="BT-11">Projektreferenz</entry>
+  <entry key="xr:Contract_reference" id="BT-12">Vertragsreferenz</entry>
+  <entry key="xr:Purchase_order_reference" id="BT-13">Bestellreferenz</entry>
+  <entry key="xr:Sales_order_reference" id="BT-14">Auftragsreferenz</entry>
   <entry key="xr:Invoicing_period_start_date" id="BT-73">Start des Abrechnungszeitraums</entry>
   <entry key="xr:Invoicing_period_end_date" id="BT-74">Ende des Abrechnungszeitraums</entry>
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry>
