--- a/src/xsl/l10n/de.xml
+++ b/src/xsl/l10n/de.xml
@@ -34,6 +34,7 @@
   <entry key="xr:Contract_reference" id="BT-12">Vertragsreferenz</entry>
   <entry key="xr:Purchase_order_reference" id="BT-13">Bestellreferenz</entry>
   <entry key="xr:Sales_order_reference" id="BT-14">Auftragsreferenz</entry>
+  <!-- Be aware that these are for the whole invoice -->
   <entry key="xr:Invoicing_period_start_date" id="BT-73">Start des Abrechnungszeitraums</entry>
   <entry key="xr:Invoicing_period_end_date" id="BT-74">Ende des Abrechnungszeitraums</entry>
   <entry key="xr:Preceding_Invoice_reference" id="BT-25">Rechnungsnummer</entry>
